@@ -5,7 +5,7 @@ JAVA_OPTS="$JAVA_OPTS -Dalfresco.home=/usr/local/alfresco"
 JAVA_OPTS="$JAVA_OPTS -Dfile.encoding=UTF-8"
 JAVA_OPTS="$JAVA_OPTS -Dcom.sun.management.jmxremote"
 JAVA_OPTS="$JAVA_OPTS -XX:ReservedCodeCacheSize=128m"
-JAVA_OPTS="$JAVA_OPTS -Xms768m -Xmx5608m -Djavax.net.ssl.trustStore=/data/truststore.jks" # java-memory-settings
+JAVA_OPTS="$JAVA_OPTS -Xms1024m -Xmx5000m -XX:MaxPermSize=256M -Djavax.net.ssl.trustStore=/data/truststore.jks" # java-memory-settings
 
 # service:jmx:rmi:///jndi/rmi://192.168.1.33:9999/jmxrmi
 #JAVA_OPTS="$JAVA_OPTS -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=9999 -Dcom.sun.management.jmxremote.rmi.port=9999"
